# kotonoha

./: .dockerignore  .env.example  .gitignore  .npmrc  Dockerfile  Makefile  README.md  compose.prod.yaml  compose.yaml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.svelte  app.css  index.html  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: base.rs  frontmatter.rs  fs.rs  git.rs  index.rs  mod.rs  parse.rs  watcher.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src/lib/: base.ts
apps/desktop/src/lib/components/: BacklinkPanel.svelte  CategoryPickerModal.svelte  EditorPane.svelte  FileNavigator.svelte  FileTreeNode.svelte  FuzzySearchModal.svelte  GitPanel.svelte  PreviewPane.svelte  Sidebar.svelte  StatusBar.svelte  TabBar.svelte  TreeSidebar.svelte  VaultSelector.svelte
apps/desktop/src/lib/stores/: editor.svelte.ts  git.svelte.ts  tabs.svelte.ts  vault.svelte.ts  watcher.svelte.ts
apps/web/: package.json  svelte.config.js  vite.config.ts  vitest.config.ts
apps/web/src/: app.d.ts  app.html  hooks.server.ts
apps/web/src/lib/: api.ts  markdown.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/static/: manifest.json
docs/: core_desktop.md  core_web.md  spec_desktop.md  spec_monorepo.md  spec_web.md
(+42 files in other folders)
