[package]
name = "kotonoha-desktop"
version = "0.1.0"
description = "kotonoha - Markdown note app"
authors = ["you"]
edition = "2021"

[lib]
name = "kotonoha_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
git2 = "0.19"
nucleo-matcher = "0.3"
pulldown-cmark = { version = "0.12", features = ["simd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
once_cell = "1"
chrono = "0.4"
